# libgaio

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  DOC-README.md  Doxyfile  README.md  install
src/: CMakeLists.txt  gaio.c  gaio.h
test/: CMakeLists.txt  gaio_test.c  test
